# Sticky-Sapphire

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
APK/: USBCameraViewer-v.1.0.apk  USBCameraViewer-v.1.1.apk
DancingLama/: build.gradle
DancingLama/android/: AndroidManifest.xml  build.gradle
DancingLama/android/res/values/: strings.xml
DancingLama/android/src/ru/venusgames/dancinglama/: AndroidLauncher.java
DancingLama/core/src/ru/venusgames/dancinglama/: DancingLama.java
DiscardedSteel/: CMakeLists.txt
DiscardedSteel/include/: DiscardedSteel.h
DiscardedSteel/include/DiscardedSteel/: AndroidLogStreambuf.h  Capture.h  RgbImage.h  RgbImageViewer.h  Updater.h  UsbCameraViewer.h  Uvc.h
DiscardedSteel/src/: AndroidLogStreambuf.cpp  Capture.cpp  RgbImageViewer.cpp  Updater.cpp  UsbCameraViewer.cpp  Uvc.cpp
StickySapphire/app/: build.gradle  proguard-rules.pro
StickySapphire/app/src/androidTest/java/com/example/pavel/stickysapphire/: ApplicationTest.java
StickySapphire/app/src/main/: .gitignore  AndroidManifest.xml
StickySapphire/app/src/main/java/com/example/pavel/stickysapphire/: StickySapphireActivity.java  StickySapphireGlSurfaceView.java  StickySapphireRenderer.java  StickyUpdater.java
StickySapphire/app/src/main/res/layout/: activity_sticky_sapphire.xml
StickySapphire/app/src/main/res/values/: strings.xml
StickySapphire/app/src/test/java/com/example/pavel/stickysapphire/: ExampleUnitTest.java
USBDeviceViewer/: AndroidManifest.xml  build.xml  local.properties
USBDeviceViewer/jni/: Android.mk  AndroidLogBuffer.cpp  AndroidLogBuffer.h  Application.mk  Common.h  Error.cpp  Error.h  RgbImage.h  RgbImageViewer.cpp  RgbImageViewer.h  USBCameraViewer.cpp  UsbCameraViewer.cpp  UsbCameraViewer.h  androidlogbuffer.cpp  androidlogbuffer.h
USBDeviceViewer/jni/UsbCameraViewer/: Common.h  UvcImage.cpp  UvcImage.h  UvcImageGenerator.cpp  UvcImageGenerator.h  androidlogbuffer.cpp  androidlogbuffer.h
USBDeviceViewer/jni/libusb/: Android.mk  CMakeLists.txt  core.c  libusb.h  libusbi.h
USBDeviceViewer/jni/libusb/os/: linux_usbfs.c
USBDeviceViewer/jni/libuvc/: Android.mk  CMakeLists.txt
USBDeviceViewer/jni/libuvc/include/libuvc/: libuvc.h  libuvc_config.h
USBDeviceViewer/jni/libuvc/src/: device.c
USBDeviceViewer/res/layout/: main.xml
USBDeviceViewer/res/values/: strings.xml
USBDeviceViewer/src/com/shnaider/usbcameraviewer/: USBCameraViewer.java
WrenchRough/: CMakeLists.txt  WrenchRough.i
